<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <groupId>in.software.analytics</groupId>
  <artifactId>parent</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <tycho.version>0.21.0</tycho.version>
    <tycho-extras.version>0.21.0</tycho-extras.version>
    <tycho-repo.url>https://oss.sonatype.org/content/groups/public/</tycho-repo.url>
  </properties>

  <modules>
    <module>plugins</module>
    <module>features</module>
    <module>updatesite</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho.version}</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>  
         <groupId>org.eclipse.tycho</groupId>  
         <artifactId>target-platform-configuration</artifactId>  
         <version>${tycho.version}</version>  
         <configuration>  
         <target>  
           <artifact>  
             <groupId>in.software.analytics.parichayana</groupId>  
             <artifactId>luna</artifactId>  
             <version>1.0.0-SNAPSHOT</version>  
           </artifact>  
         </target>  
          <environments>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
         </configuration>  
      </plugin>  
      <plugin>
	<groupId>org.eclipse.tycho</groupId>
	<artifactId>tycho-surefire-plugin</artifactId>
	<version>${tycho.version}</version>
	<configuration>
  	  <useUIHarness>true</useUIHarness>
	  <useUIThread>true</useUIThread>
	  <argLine>-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Dorg.eclipse.ui.testsDisableWorkbenchAutoSave=true</argLine>
	  <product>org.eclipse.platform.ide</product>
	  <application>org.eclipse.ui.ide.workbench</application>
	  <dependencies>
		<dependency>
			<type>p2-installable-unit</type>
			<artifactId>org.eclipse.platform</artifactId>
			<version>0.0.0</version>
		</dependency>
	  </dependencies>
	  <includes>
		<include>**/AllTests.class</include>
		<include>**/*AllTests*.class</include>
		<include>**/*AllBotTests*.class</include>
		<include>**/*TestSuite*.class</include>
	  </includes>
	</configuration>
	</plugin>
	<plugin>
		<groupId>org.eclipse.tycho</groupId>
		<artifactId>tycho-compiler-plugin</artifactId>
		<version>${tycho.version}</version>
		<configuration>
			<encoding>UTF-8</encoding>
			<source>1.7</source>
			<target>1.7</target>
			<excludeResources>
            			<excludeResource>**/*.aj</excludeResource>
          		</excludeResources>
		</configuration>
	</plugin>
	<plugin>
		<groupId>org.eclipse.tycho</groupId>
		<artifactId>tycho-source-plugin</artifactId>
		<version>${tycho.version}</version>
		<executions>
			<execution>
				<id>plugin-source</id>
				<goals>
				<goal>plugin-source</goal>
				</goals>
                                <configuration>
                                  <finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
                                </configuration>
			</execution>
		</executions>
	</plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-packaging-plugin</artifactId>
          <version>${tycho.version}</version>
          <dependencies>
            <dependency>
              <groupId>org.eclipse.tycho.extras</groupId>
              <artifactId>tycho-buildtimestamp-jgit</artifactId>
              <version>${tycho-extras.version}</version>
            </dependency>
          </dependencies>
          <configuration>
            <strictBinIncludes>false</strictBinIncludes>
            <format>'v'yyyyMMdd-HHmm</format>
            <timestampProvider>jgit</timestampProvider>
            <finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
            <jgit.dirtyWorkingTree>warning</jgit.dirtyWorkingTree>
            <jgit.ignore>
            </jgit.ignore>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles> 
    <profile> 
      <id>mac</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>tycho-surefire-plugin</artifactId>
            <version>${tycho.version}</version>
            <configuration>
	      <argLine>-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Dorg.eclipse.ui.testsDisableWorkbenchAutoSave=true -XstartOnFirstThread</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build> 
    </profile> 
  </profiles> 
</project>
